<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ITDictionary</string>
    <string name="welcome">IT Vocabulary in Japanese..</string>
    <string name="this_is_navigation_drawer">Lets study IT kotoba</string>
    <string name="search">Search</string>
    <string name="recently_search">Recently Search</string>
    <string name="favourite">Favourite</string>
    <string name="learning_words">Learning Words</string>
    <string name="language_setting">Language Setting</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="learning">Learning</string>
    <string name="setting">Setting</string>
    <string name="choose_language">Choose Language</string>
    <string name="chooseTheme">Choose Theme</string>
    <string name="search_hint">search hint</string>
    <string name="color_pink">Pink</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="add_new_words">Add New Words</string>
    <!--AddNewWordFragment-->
    <string name="name">name</string>
    <string name="hiragana">Hiragana</string>
    <string name="kanji">Kanji</string>
    <string name="katakana">Katakana</string>
    <string name="add_new_word">Add New Word</string>
    <string name="report_the_problem">Report the problem</string>

    <!-- ReportProblem -->
    <string name="report">Report</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="send">Send</string>
</resources>
